--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
